--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <h1>
+      paupau😁
+    </h1>
+
+    <h2>
+      paul🤺👣
+    </h2>
+
+    <h3>
+      pauli🐘
+    </h3>
+
+    <h4>
+      paulii🤖
+    </h4>
+
+    <h5>
+      pauliii💀
+    </h5>
+
+    <h6>
+      pauliiii👹
+    </h6>
+
+    <p>
+      Un párrafo, también llamado parágrafo, es una unidad comunicativa del
+      lenguaje escrito compuesta por un conjunto de oraciones que tienen cierta
+      unidad temática o que, sin tenerla, se enuncian juntas+
+    </p>
   </body>
 </html>
