--- a/index.html
+++ b/index.html
@@ -2,39 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Static Template</title>
   </head>
   <body>
-    <h1>
-      paupau😁
-    </h1>
-
-    <h2>
-      paul🤺👣
-    </h2>
-
-    <h3>
-      pauli🐘
-    </h3>
-
-    <h4>
-      paulii🤖
-    </h4>
-
-    <h5>
-      pauliii💀
-    </h5>
-
-    <h6>
-      pauliiii👹
-    </h6>
-
-    <p>
-      Un párrafo, también llamado parágrafo, es una unidad comunicativa del
-      lenguaje escrito compuesta por un conjunto de oraciones que tienen cierta
-      unidad temática o que, sin tenerla, se enuncian juntas+
-    </p>
+    <p id="prueba">Texto de prueba</p>
   </body>
 </html>
