--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Static Template</title>
   </head>
   <body>
-    <p id="prueba">Texto de prueba</p>
+    <h3 id="titulo">frase emotiva</h3>
+
+    <p id="linea1">Tarde o temprano todas las piezas</p>
+    <h4>acaban encajando.</h4>
+
+    Hasta entonces, ríete de la confusión, vive el momento y entiende que todo
+    sucede por algún motivo….
   </body>
 </html>
