--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <h3 id="titulo">frase emotiva</h3>
-
     <p id="linea1">Tarde o temprano todas las piezas</p>
-    <h4>acaban encajando.</h4>
+    <p id="linea2">acaban encajando.</p>
+    <p class="linea3y4">hasta entonces,</p>
+    <p class="linea3y4">ríete de la confusión,</p>
+    <p class="linea5y6">VIVE EL MOMENTO</p>
+    <p class="linea5y6">Y ENTIENDE QUE TODO</p>
 
-    Hasta entonces, ríete de la confusión, vive el momento y entiende que todo
-    sucede por algún motivo….
+    <p id="linea7">
+      vive el momento y entiende que todo sucede por algún motivo….
+    </p>
   </body>
 </html>
