--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
     <title>Static Template</title>
   </head>
   <body>
-    <h3 id="titulo">frase emotiva</h3>
-    <p id="linea1">Tarde o temprano todas las piezas</p>
-    <p id="linea2">acaban encajando.</p>
-    <p class="linea3y4">hasta entonces,</p>
-    <p class="linea3y4">ríete de la confusión,</p>
-    <p class="linea5y6">VIVE EL MOMENTO</p>
-    <p class="linea5y6">Y ENTIENDE QUE TODO</p>
-
-    <p id="linea7">
-      vive el momento y entiende que todo sucede por algún motivo….
-    </p>
+    <img id="man" src="imagenes/man.webp" width="400px" height="400px" />
   </body>
 </html>
