--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Static Template</title>
   </head>
   <body>
-    <img id="man" src="imagenes/man.webp" width="400px" height="400px" />
+    <h2>kevin mier hermoso</h2>
+    <img src="imagenes/man.webp" id="man" />
+    <p>kevin mier es el arquero titular del nacional</p>
+
+    <h2>macnelly torres hermoso</h2>
+    <img src="imagenes/macnellty.jpg" id="macnelly" />
+    <p>macnelly es un idolo verdolaga</p>
+
+    <h2>macnelly torres hermoso</h2>
+    <img src="imagenes/RENE-HIGITA-1.jpg" id="rene" />
+    <p>rene es un idolo verdolaga y arquero historico</p>
   </body>
 </html>
