--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img src="imagenes/macnellty.jpg" id="macnelly" />
     <p>macnelly es un idolo verdolaga</p>
 
-    <h2>macnelly torres hermoso</h2>
-    <img src="imagenes/RENE-HIGITA-1.jpg" id="rene" />
+    <h2>rene higuita hermoso</h2>
+    <img src="imagenes/RENE-HIGUITA-1.jpg" id="rene" />
     <p>rene es un idolo verdolaga y arquero historico</p>
   </body>
 </html>
