--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Static Template</title>
+    <title>Evaluación acumulativa</title>
   </head>
+
+  <header>
+    <h1>La vida de pauli!!💊💉🩺</h1>
+  </header>
   <body>
-    <h2>kevin mier hermoso</h2>
-    <img src="imagenes/man.webp" id="man" />
-    <p>kevin mier es el arquero titular del nacional</p>
+    <h3>¿que quiero estudiar?</h3>
+    <p>
+      Esta es una pregunta que me he hecho desde que tengo uso de razòn ,cuando
+      salga del colegio quiero presentarme a 2 carreras 📃 para tener distintas
+      opciones te las voy a mencionar y tambien el porque. Medicina es la
+      primera porque me encantaria saber todo acerca de nuestro cuerpo humano y
+      de que manera puedo ayudar a las otras personas a lidiar con sus problemas
+      de salud me encanta estudiar principalmente anatomia y las articulaciones,
+      es por esto que mi segunda carrera a estudiar es la fisioterapia , yo soy
+      deportista de alto rendimiento y me encanta el trabajo que hacen los
+      fisioterpeutas la manera en que saben como actuar frente a alguna molestia
+      articular , tambien porque soy una gran hincha de nacional y mi gran sueño
+      es medica deportologa o fisioterapeuta 🦶🦶🏽 de la institución 💚🤍.
 
-    <h2>macnelly torres hermoso</h2>
-    <img src="imagenes/macnellty.jpg" id="macnelly" />
-    <p>macnelly es un idolo verdolaga</p>
-
-    <h2>rene higuita hermoso</h2>
-    <img src="imagenes/RENE-HIGUITA-1.jpg" id="rene" />
-    <p>rene es un idolo verdolaga y arquero historico</p>
+      <br /><br />
+      gracias por leer :)
+    </p>
+    <img src="imagenes/medico.jpg" id="medico" />
   </body>
+
+  <footer>
+    paulina gutierrez vanegas <br />
+    edad: 15<br />
+    medellin,colombia
+
+    <br />
+    <a href="paulinagutierrexv:gmail@gmail.com">email</a>
+  </footer>
 </html>
